[package]
name = "rr-to-epub"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.42.0", features = ["full"] }
zip = { version = "0.6.6", default-features = false }
reqwest = { version = "0.12.9", default-features = false, features = [
    "brotli",
    "gzip",
    "rustls-tls-webpki-roots",
] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
scraper = "0.17.1"
dirs = "5.0.1"
clap = { version = "4.5.22", features = ["derive"] }
xml-rs = "0.8.24"
image = "0.24.9"
bytes = "1.9.0"
webp = "0.2.6"
url = "2.5.4"
rand = "0.8.5"
